# open-source-link-shortener

./: .gitignore  Cargo.toml  Rocket.toml
migrations/2020-09-17-162528_create_shortcuts/: down.sql  up.sql
src/: database.rs  host_guard.rs  main.rs  models.rs  schema.rs
templates/: admin_login.hbs  error_code.hbs  index.hbs  new_shortcut.hbs  sample.hbs
templates/common/: footer.hbs  head.hbs
