[package]
name = "open_source_link_shortener"
version = "0.1.0"
authors = ["Jakub Tomana <jakub.tomana@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates"]