[package]
name = "open_source_link_shortener"
version = "0.1.0"
authors = ["Jakub Tomana <jakub.tomana@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres","sqlite"] }
dotenv = "0.15.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates","diesel_sqlite_pool"]